# spy-cat

./: .dockerignore  .gitignore  README.md  dev-docker.sh  docker-compose-dev.yml  pyproject.toml
cats/: models.py  urls.py  views.py
cats/migrations/: 0001_initial.py  0002_mission_target.py
mysite/: settings.py  urls.py
sample/: bad_cat.json  free_mission.json  mission.json  ok_cat.json
test/: bad_curl.sh  delete_curl.sh  free_mission.sh  ok_curl.sh  ok_mission.sh  patch_curl.sh  update_target.sh  update_target_notes.sh
