[project]
name = "spy-cat-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
    "django-stubs[compatible-mypy]>=5.1.1",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.12
warn_unused_configs = true
check_untyped_defs = true

[tool.django-stubs]
django_settings_module = "mysite.settings"

[tool.ruff]
line-length = 80
exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pyflakes,
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff specific
    "RUF",
    # type checking
    "TC",
    # pylint
    "PL",
    # django's stuff
    "DJ",
    # datetime
    "DTZ",
    # simplify lint
    "SIM",
]
ignore = [
    # I don't agree that Optional should be deprecated
    "UP007",
    # use f-string instead of .format
    # I know they both exist, now shut up
    "UP032",
    # ok, ClassVar is great, but... no
    # it's pedantic and messes up with Django too much
    "RUF012",
    # ruff should re-format long lines anyway, if possible
    "E501",
    # because this one is annoying
    # if I want a lambda, I want a lambda
    "E731",
    # move type imports under TYPE_CHECKING
    # ok, this one is a bit insane, sorry
    "TC003"
]
